--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introducción a GIT</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
     <header>
         <h1>Bienvenido a la Actividad 2 de 
-            Git
+            Git 
         </h1>
     </header>
     <section>
