--- a/pagina 2.html
+++ b/pagina 2.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina 2</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
+
 <body>
-    
+    <section>
+        <h1>Pagina 2 repitiendo que soy un pro</h1>
+    </section>
+    <p style="color: cyan;">en efecto eres un pro</p>
 </body>
+
 </html>
