--- a/pagina 1.html
+++ b/pagina 1.html
@@ -12,7 +12,9 @@
     <section>
         <h1>De aqui aprendo git como un pro</h1>
     </section>
-
+    <section>
+        <a href="index.html">Volver</a>
+    </section>
 </body>
 
 </html>
