--- a/pagina 2.html
+++ b/pagina 2.html
@@ -13,6 +13,9 @@
         <h1>Pagina 2 repitiendo que soy un pro</h1>
     </section>
     <p style="color: cyan;">en efecto eres un pro</p>
+    <section>
+        <a href="index.html">Volver</a>
+    </section>
 </body>
 
 </html>
