--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <p>Esta prueba la tengo que hacer porque si no se git soy nada</p>
         <p>Esta prueba la tengo que hacer porque si no se git soy nada</p>
         <p>Esta prueba la tengo que hacer porque si no se git soy nada</p>
+        <a href="pagina 1.html">ir a pagina 1</a> <a href="pagina 2.html"> ir a pagina 2</a>
     </section>
 </body>
 
